--- a/package.json
+++ b/package.json
@@ -1,9 +1,47 @@
 {
   "name": "jet-goes-brrr",
-  "version": "0.0.0",
-  "description": "Jet goes brrr",
+  "version": "0.1.0",
+  "description": "Practice project mainly for webpack",
   "main": "server.js",
   "author": {
-    "name": ""
+    "name": "Scrios"
+  },
+  "scripts": {
+    "start": "webpack --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
+  },
+  "keywords": [
+    "game",
+    "parallax",
+    "node",
+    "webpack",
+    "clean-code",
+    "pixi.js"
+  ],
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
+    "css-minimizer-webpack-plugin": "^1.2.0",
+    "file-loader": "^6.2.0",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.0",
+    "jquery": "^3.5.1",
+    "mini-css-extract-plugin": "^1.3.3",
+    "nodemon": "^2.0.6",
+    "nodemon-webpack-plugin": "^4.3.2",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.11.1",
+    "webpack-cli": "^4.3.0",
+    "webpack-merge": "^5.7.3"
+  },
+  "dependencies": {
+    "clean-webpack-plugin": "^3.0.0",
+    "express": "^4.17.1",
+    "pixi.js": "^5.3.6"
   }
 }
