--- a/.gitignore
+++ b/.gitignore
@@ -339,5 +339,9 @@ ASALocalRun/
 # BeatPulse healthcheck temp database
 healthchecksdb
 
-# Webpack generated files
+# Webpack
 dist/
+
+# Jest
+bin/
+obj/
