--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "start": "webpack --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js",
+    "test": "jest --verbose"
   },
   "keywords": [
     "game",
@@ -28,6 +29,7 @@
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.6.3",
     "jquery": "^3.5.1",
     "mini-css-extract-plugin": "^1.3.3",
     "nodemon": "^2.0.6",
