feat(babel): added @babel/plugin-proposal-class-properties to handle class properties

--- a/package.json
+++ b/package.json
@@ -11,6 +11,15 @@
     "build": "webpack --config webpack.prod.js",
     "test": "jest --verbose"
   },
+  "babel": {
+    "presets": [ "@babel/preset-env" ],
+    "plugins": [
+      [
+        "@babel/plugin-proposal-class-properties",
+        { "loose": true }
+      ]
+    ]
+  },
   "keywords": [
     "game",
     "parallax",
@@ -22,6 +31,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
